--- a/analysis 2/Etude de la biométrie humaine.Rmd
+++ b/analysis 2/Etude de la biométrie humaine.Rmd
@@ -9,7 +9,7 @@ output: html_document
   Nous avons interrogé une série de personnes, selon des critères bien définis, sur leurs caractéristiques physiques (taille, masse, mensurations), leurs habitudes alimentaires ainsi que sur leur activité physique aussi bien de nature sportive que dans la cadre professionnel. Ces données une fois répertoriées, nous nous sommes lancés dans une analyse de la biométrie humaine.
 
 # But
-  Récolte de données autour de la biométrie humaine afin de tirer des conclusions, suite à une analyse statistique appronfie, quant au taux de cas d'obésité dans le hainaut particulièrement.
+  Récolte de données autour de la biométrie humaine afin de tirer des conclusions, suite à une analyse statistique appronfondie, quant au taux de cas d'obésité dans le hainaut particulièrement.
 
 # Matériels et méthodes
 
@@ -395,6 +395,30 @@ chart(data = biometry, ~ alcool %fill=% acti_profession | acti_profession) +
 ```
 
 Nous constatons qu'il n'y a pas une différence drastique dans la consommation d'alcool des personnes actives, intermédiaires et sédentaires. Sur base de ce graphique nous pouvons uniquement remarquer que les personnes actives et sédentaires ont tendance à consommer davantage d'alcool que les personnes intermédiaires. Cependant, les personnes sédentaires une tendance à la consommation d'alcool un peu plus élevées avec des consommations pour une petite minorité pouvant aller jusqu'à 42 verres par semaine.
+
+```{r}
+
+d <- chart(data = biometry, ~ acti_physique(0) %fill=% imc_schedule) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()
+
+e <- chart(data = biometry, ~ alcool(0) %fill=% imc_schedule) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()
+
+f <- chart(data = biometry, ~ fastfood(0) %fill=% imc_schedule) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()
+
+
+combine_charts(list(d, e, f), common.legend = TRUE)
+```
 
 
 
