--- a/analysis 2/Etude de la biométrie humaine.Rmd
+++ b/analysis 2/Etude de la biométrie humaine.Rmd
@@ -247,17 +247,6 @@ chart(data = biometry, masse_corr ~ age %col=% acti_profession | genre) +
  
  Nous observons que les hommes ont tendance de manière générale à avoir une masse plus élevée que celle des femmes à partir de la vingtaine. De plus, cette masse a tendance à s'accroître avec l'âge davantage chez les hommes que chez les femmes. Avec ce graphique on remarque que l'activité professionelle n'influence pas beaucoup la masse ce qui est étonnnant. En effet chez les femmes, on remarque que certes la sédentarité est en corrélation avec une masse plus lourde mais on remarque également des femmes actives avec une masse supérieure à celle de ces mêmes personnes sédentaires. Chez les hommes, on voit que beaucoup d'actifs sont plus lourds que la majorité des sédentaires
  
-```{r}
-biometry$imc_schedule <- as.factor(biometry$imc_schedule)
-```
- 
- 
-```{r}
-chart(data = biometry, ~ fastfood | imc_schedule ) +
-  stat_density() +
-  ylab("Densité")
-```
->Lier avec le graphique qui suit? 
  
 ###Masse des hommes et des femmes en fonctions de leurs avec avec une jauge du nombre de fastfood par semaine. 
 ```{r}
@@ -311,13 +300,21 @@ biometry
 ```{r}
 biometry <- mutate(biometry,
   imc_schedule = case_when(
-    imc < 18.5 ~ "sous poids",
-    imc >= 18.5 & imc < 25 ~ "poids normal",
+    imc < 18.5 ~ "sous_poids",
+    imc >= 18.5 & imc < 25 ~ "poids_normal",
     imc >= 25 & imc < 30 ~ "surpoids",
     imc >= 30 ~ "obésité"
 ))
 
 biometry
+```
+
+```{r}
+biometry$imc_schedule <- as.factor(biometry$imc_schedule)
+```
+
+```{r}
+
 ```
 
  
@@ -374,6 +371,45 @@ chart(data = biometry, ~ alcool %fill=% acti_profession | acti_profession) +
 
 Nous constatons qu'il n'y a pas une différence drastique dans la consommation d'alcool des personnes actives, intermédiaires et sédentaires. Sur base de ce graphique nous pouvons uniquement remarquer que les personnes actives et sédentaires ont tendance à consommer davantage d'alcool que les personnes intermédiaires. Cependant, les personnes sédentaires une tendance à la consommation d'alcool un peu plus élevées avec des consommations pour une petite minorité pouvant aller jusqu'à 42 verres par semaine.
 
+```{r}
+c <- filter (biometry, imc_schedule == "sous_poids")%>.%
+  chart(., ~ imc_schedule %fill=% acti_profession) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()  
+
+ d <- filter (biometry, imc_schedule == "poids_normal")%>.%
+  chart(., ~ imc_schedule %fill=% acti_profession) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()  
+ 
+ e <- filter (biometry, imc_schedule == "surpoids")%>.%
+  chart(., ~ imc_schedule %fill=% acti_profession) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()  
+ 
+ f <- filter (biometry, imc_schedule == "obésité")%>.%
+  chart(., ~ imc_schedule %fill=% acti_profession) +
+  geom_bar(width = 1) + 
+  coord_polar("y", start = 0) +
+  theme_void() +
+  scale_fill_viridis_d()  
+ 
+ combine_charts(list(c, d, e, f), common.legend = TRUE)
+ 
+```
+> Mettre un titre A = Sous-poids, B= Poids normal, C= Surpoids, D= Obésité
+
+```{r}
+chart(data = biometry, ~ fastfood | imc_schedule ) +
+  stat_density() +
+  ylab("Densité")
+```
 
 #conclusion 
 
