--- a/analysis /Etude de la biométrie humaine.Rmd
+++ b/analysis /Etude de la biométrie humaine.Rmd
@@ -484,6 +484,6 @@ Grace aux différent graphique on remarque que l'age influence le poids ce qui e
 
 On constate en général que les hommes ont un poids plus élevé que celui des femmes cela peut s'expliquer par le fait que leur masse musculaire est plus grande à cause la testostérone et ils sont généralement plus grand et nous avons vu que le poids était proportionnel à la taille.
 Les jeunes ont tendance à avoir un poids plus équilibré qu'ils fassent du sport, qu'ils boivent de l'alcool ou non. Ils ont une meilleure conditions physique et récupèrent plus vite que les adultes car ils sont encore en pleine croissance. Donc même s'ils mangent gras ou consomment beaucoup de viandes, cela n'a pas un réel effet sur leur imc.
-Les personnes âgées mangent moins bien et n'ont plus d'activité physique fréquente ni d'activité professionnelle non plus donc ils ont tendance à prendre du poids. Cartaines personnes agées peuvent aussi en perdre à cause de maladie ou autres facteurs influencant le poids. 
+Les personnes âgées mangent moins bien et n'ont plus d'activité physique fréquente ni d'activité professionnelle non plus donc ils ont tendance à prendre du poids. Cartaines personnes agées peuvent aussi en perdre à cause de maladie ou d'autres facteurs pouvant influencer le poids. 
 Nous constatons aussi que l'activité professionnelle n'est pas un bon indicateur pour savoir si les personnes qui sont moins actives au travail sont plus lourdes car il y a d'autres facteurs à prendre en compte comme les repas ou encore le sport et la quantité de verre d'alcool par semaine ou encore le grignotage qui n'inluencent pas non plus.
 Sur nos graphique on s'aperçoit également que le Hainaut n'est pas en obésité. Nous avons une grande majorité des personnes en poids normal avec comme influenceur principale, l'age et le sport. 
